--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,23 @@
         <div class="container" id="section1">
             <div class="container" id="calculador">
                 <section id="dosagem">
+                    <p>Qual a categoria do medicamento?</p>
+                    <form>
+                        <input type="radio" id="antibiotico" name="fav_language" value="html">
+                        <label for="antibiotico">Antibiotico</label><br>
+                        <input type="radio" id="psico" name="fav_language" value="html">
+                        <label for="psico">Psicotropico</label><br>
+                        <input type="radio" id="demais" name="fav_language" value="html">
+                        <label for="demais">outros</label><br>
+                    </form>
                     <h2>Calculo de Dosagem</h2>
+                    <p>Quantas mg/ml(miligrama por ml) vem no frasco?</p>
+                    <form>
+                        <label for="fname">Quantas mg? :</label>
+                        <input type="text" id="fname" name="fname"><br>
+                        <label for="lname">Quantas ml? :</label>
+                        <input type="text" id="lname" name="lname">
+                    </form>
                 </section>
                 <section id="posologia">
                     <h2>Posologia</h2>
