--- a/static/style2.css
+++ b/static/style2.css
@@ -12,13 +12,14 @@
     border: solid 2px #000;
     border-radius: 10px;
 }
-
+/* abertura do titulo bem vindo ao farmaty da pagina index*/
 #margem1{
     width: 100%;
-    height: 200px;
+    height: 70px;
     display: flex;
     align-items: center;
-     background-color: orange;
+    position: relative;
+    top: 5px;
 
 }
 
@@ -27,8 +28,9 @@
     width: 100%;
     height: 100px;
     display: flex;
-    align-items: center;
-
+    text-align: center;
+    position: relative;
+    top: 20px;
 }
 
 
@@ -38,12 +40,29 @@
     text-align: center;
     color: #fff;
 
+
 }
+/*fechamento da estilização do titulo bem vindo ao farmaty*/
+
 
 #section1{
-    height: 500px;
+    height: 470px;
     background-color: #fff;
     width: 100%;
+    position: relative;
+    top: 10px;
+    border-radius: 10px
+
+
+}
+
+#section2{
+    height: 150px;
+
+}
+
+#section3{
+    display: flex;
 
 }
 
@@ -51,8 +70,9 @@
     height:450px;
     width: 100%;
     background-color: #d3d3d3;
-    display: flex;
-    justify-content: space-evenly;
+    position: relative;
+    top: 7px;
+    border-radius: 10px;
 
 }
 
