--- a/templates/index.html
+++ b/templates/index.html
@@ -3,37 +3,49 @@
 <div id="bottom">
     <div class="container" id="conteudo">
         <div class="container" id="margem1">
-            <div class="class" id="margem2">
+            <div class="container" id="margem2">
 
-                <div class="container" id="bem-vindo"><h2>Olá Bem vindo</h2></div>
+                <div class="container" id="bem_vindo"><h2>Bem vindo ao Farmaty</h2></div>
 
             </div>
+
         </div>
+
+
         <div class="container" id="section1">
-            <div class="container" id="calculador">
-                <section id="dosagem">
-                    <p>Qual a categoria do medicamento?</p>
-                    <form>
-                        <input type="radio" id="antibiotico" name="fav_language" value="html">
-                        <label for="antibiotico">Antibiotico</label><br>
-                        <input type="radio" id="psico" name="fav_language" value="html">
-                        <label for="psico">Psicotropico</label><br>
-                        <input type="radio" id="demais" name="fav_language" value="html">
-                        <label for="demais">outros</label><br>
-                    </form>
-                    <h2>Calculo de Dosagem</h2>
-                    <p>Quantas mg/ml(miligrama por ml) vem no frasco?</p>
-                    <form>
-                        <label for="fname">Quantas mg? :</label>
-                        <input type="text" id="fname" name="fname"><br>
-                        <label for="lname">Quantas ml? :</label>
-                        <input type="text" id="lname" name="lname">
-                    </form>
-                </section>
-                <section id="posologia">
-                    <h2>Posologia</h2>
-                </section>
-            </div>
+
+                <div class="container" id="calculador">
+                    <div class="container" id="section2">
+                        <h2>Informe a Categoria :</h2>
+                        <form>
+                            <input type="radio" id="antibiotico" name="fav_language" value="html">
+                            <label for="antibiotico"><strong>Antibiotico</strong></label><br>
+                            <input type="radio" id="psico" name="fav_language" value="html">
+                            <label for="psico"><strong>Psicotropicos</strong></label><br>
+                            <input type="radio" id="demais" name="fav_language" value="html">
+                            <label for="demais"><strong>outros</strong></label><br>
+                        </form>
+
+                    </div>
+                    <div class="container" id="section3">
+                        <section id="dosagem">
+                            <h3>Calculo de Dosagem</h3>
+                            <p>Quantas mg/ml(miligrama por ml) vem no frasco?</p>
+                            <form>
+                                <label for="fname">Quantas mg? :</label>
+                                <input type="text" id="fname" name="fname"><br>
+                                <label for="lname">Quantas ml? :</label>
+                                <input type="text" id="lname" name="lname">
+                            </form>
+                        </section>
+                        <section id="posologia">
+                            <h3>Posologia</h3>
+                        </section>
+
+                    </div>
+                </div>
+
+
 
         </div>
 
