--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
 
 
         <div class="container" id="section1">
+            <div class="container" id="section2">
 
-                <div class="container" id="calculador">
-                    <div class="container" id="section2">
+                <div class="container" >
                         <h2>Informe a Categoria :</h2>
                         <form>
                             <input type="radio" id="antibiotico" name="fav_language" value="html">
@@ -27,6 +27,11 @@
                         </form>
 
                     </div>
+
+            </div>
+
+                <div class="container" id="calculador">
+
                     <div class="container" id="section3">
                         <section id="dosagem">
                             <h3>Calculo de Dosagem</h3>
