--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <div class="container" id="section2">
 
                 <div class="container" >
-                        <h2>Informe a Categoria :</h2>
+                        <h2>Informe a Categoria :</h2><br>
                         <form>
                             <input type="radio" id="antibiotico" name="fav_language" value="html">
                             <label for="antibiotico"><strong>Antibiotico</strong></label><br>
@@ -34,17 +34,20 @@
 
                     <div class="container" id="section3">
                         <section id="dosagem">
-                            <h3>Calculo de Dosagem</h3>
-                            <p>Quantas mg/ml(miligrama por ml) vem no frasco?</p>
-                            <form>
-                                <label for="fname">Quantas mg? :</label>
-                                <input type="text" id="fname" name="fname"><br>
-                                <label for="lname">Quantas ml? :</label>
-                                <input type="text" id="lname" name="lname">
-                            </form>
+                            <h3>Calculo de Dosagem</h3><br>
+                            <p><strong>Quantas mg/ml(miligrama por ml) vem no frasco?</strong></p>
+                                <form>
+                                    <label for="fname"><strong>Quantas mg? :</strong></label>
+                                    <input type="text" id="fname" name="fname"><br><br>
+                                    <label for="lname"><strong>quantas ml? :</strong></label>
+                                    <input type="text" id="lname" name="lname">
+                                </form>
                         </section>
                         <section id="posologia">
                             <h3>Posologia</h3>
+                            <div  id="menssagem">
+
+                            </div>
                         </section>
 
                     </div>
