--- a/static/style2.css
+++ b/static/style2.css
@@ -72,7 +72,7 @@
 
 }
 #calculador{
-    height:250px;
+    height:350px;
     width: 100%;
     background-color: #d3d3d3;
     position: relative;
@@ -89,12 +89,20 @@
 #posologia{
     width: 50%;
 
+
 }
 
 #menssagem{
-    height: 150px;
+    height: 300px;
     width: 50%;
-    background-color: #fff;
+    background-color: #87CEFA;
     border: 1px solid #000;
+
+}
+.linha{
+    width: 100%;
+    height: 25px;
+    background-color:
+
 
 }
