--- a/templates/index.html
+++ b/templates/index.html
@@ -35,22 +35,33 @@
                     <div class="container" id="section3">
                         <section id="dosagem">
                             <h3>Calculo de Dosagem</h3><br>
+                            <p><strong>quantas miligramas por dose está preescrita na receita?</strong></p>
+                                <form>
+                                    <label for="dose"><strong>dosagem? :</strong></label>
+                                    <input type="text" id="dose" name="dose"><br><br>
+                                </form>
                             <p><strong>Quantas mg/ml(miligrama por ml) vem no frasco?</strong></p>
-                                <form action="{{url_for('criar') }}" method="post">
+                                <form action="{{url_for('index') }}" method="post">
+
                                     <label for="mg"><strong>Quantas mg? :</strong></label>
                                     <input type="text" id="mg" name="mg"><br><br>
                                     <label for="ml"><strong>quantas ml? :</strong></label>
-                                    <input type="text" id="ml" name="ml"><br><br>
-                                    <label for="dose"><strong>quantas miligramas por dose? :</strong></label>
-                                    <input type="text" id="dose" name="dose">
+                                    <input type="text" id="ml" name="ml">
+                                    <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+
                                 </form>
                         </section>
                         <section id="posologia">
-                            <h3>Posologia</h3>
-                            <div  id="menssagem">
-                                <p></p>
+                            <h3>Posologia :</h3>
+
+                            <div class="container" id="menssagem"><br><br><br>
+                                <div class="linha bg-primary"></div><br>
+                                <div class="linha bg-primary"></div><br>
+                                <div class="linha bg-primary"></div><br>
+                                <div class="linha bg-primary"></div>
 
                             </div>
+
                         </section>
 
                     </div>
