--- a/static/style2.css
+++ b/static/style2.css
@@ -93,16 +93,20 @@
 }
 
 #menssagem{
-    height: 300px;
+    height: 290px;
     width: 50%;
-    background-color: #87CEFA;
+    background-color: #bdbebd;
     border: 1px solid #000;
+    border-radius: 10px;
 
 }
 .linha{
+    border: 1px solid #000;
+    border-radius: 10px;
     width: 100%;
     height: 25px;
-    background-color:
+    background-color: #a9a9a9;
+    box-shadow: 5px 10px;
 
 
 }
