--- a/templates/index.html
+++ b/templates/index.html
@@ -54,11 +54,13 @@
                         <section id="posologia">
                             <h3>Posologia :</h3>
 
-                            <div class="container" id="menssagem"><br><br><br>
-                                <div class="linha bg-primary"></div><br>
-                                <div class="linha bg-primary"></div><br>
-                                <div class="linha bg-primary"></div><br>
-                                <div class="linha bg-primary"></div>
+                            <div class="container" id="menssagem"><br>
+                                <div class="linha "></div><br>
+                                <div class="linha "></div><br>
+                                <div class="linha "></div><br>
+                                <div class="linha "></div><br>
+                                <div class="linha "></div>
+
 
                             </div>
 
