--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "header.html" %}
 {% block conteudo %}
-<div id="bottom">
-    <div class="container" id="conteudo">
+<div  id="bottom">
+    <div class="container bg-primary" id="aspecto_borda">
+        <div class="container " id="conteudo">
         <div class="container" id="margem1">
             <div class="container" id="margem2">
 
@@ -12,7 +13,13 @@
         </div>
 
 
-        <div class="container" id="section1">
+        <div class="container bg-primary" id="section1">
+             <div class="container" id="info">
+                            <p>
+                                <strong>Farmaty, criado para calcular as dosagens de acordo com as especificações
+                                passadas em receitas médicas.</strong>
+                            </p>
+                        </div>
             <div class="container" id="section2">
 
                 <div class="container" >
@@ -32,7 +39,9 @@
 
                 <div class="container" id="calculador">
 
+
                     <div class="container" id="section3">
+
                         <section id="dosagem">
                             <h3>Calculo de Dosagem</h3><br>
                             <p><strong>quantas miligramas por dose está preescrita na receita?</strong></p>
@@ -73,6 +82,7 @@
 
         </div>
 
+    </div>
     </div>
 </div>
 
