--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                         <section id="posologia">
                             <h3>Posologia :</h3>
 
-                            <div class="container" id="menssagem"><br>
+                            <div class="container bg-primary" id="menssagem"><br>
                                 <div class="linha "></div><br>
                                 <div class="linha "></div><br>
                                 <div class="linha "></div><br>
