--- a/templates/index.html
+++ b/templates/index.html
@@ -61,12 +61,17 @@
                                 </form>
                         </section>
                         <section id="posologia">
+
                             <h3>Posologia :</h3>
 
-                            <div class="container bg-primary" id="menssagem"><br>
-                                <div class="linha "><p> tomar__de__</p></div><br>
-                                <div class="linha "></div>em__horas por__<br>
-                                <div class="linha ">dias</div><br>
+                                <div class="container bg-primary" id="menssagem"><br>
+                                {% for x in result %}
+                                <div class="linha ">
+                                    <p>x.result</p>
+                                </div><br>
+                                {% endfor %}
+                                <div class="linha "></div><p></p><br>
+                                <div class="linha "></div><br>
                                 <div class="linha "></div><br>
                                 <div class="linha "></div>
 
@@ -74,6 +79,7 @@
                             </div>
 
                         </section>
+
 
                     </div>
                 </div>
