--- a/templates/index.html
+++ b/templates/index.html
@@ -45,36 +45,50 @@
                         <section id="dosagem">
                             <h3>Calculo de Dosagem</h3><br>
                             <p><strong>quantas miligramas por dose está preescrita na receita?</strong></p>
-                                <form>
+                                <form action="/criar" method="post">
                                     <label for="dose"><strong>dosagem? :</strong></label>
                                     <input type="text" id="dose" name="dose"><br><br>
-                                </form>
-                            <p><strong>Quantas mg/ml(miligrama por ml) vem no frasco?</strong></p>
-                                <form action="{{url_for('index') }}" method="post">
+
+                                    <p><strong>Quantas mg/ml(miligrama por ml) vem no frasco?</strong></p>
 
                                     <label for="mg"><strong>Quantas mg? :</strong></label>
                                     <input type="text" id="mg" name="mg"><br><br>
                                     <label for="ml"><strong>quantas ml? :</strong></label>
                                     <input type="text" id="ml" name="ml">
                                     <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
-
                                 </form>
                         </section>
                         <section id="posologia">
 
-                            <h3>Posologia :</h3>
+                            <h3>{{ titulo }}</h3>
 
                                 <div class="container bg-primary" id="menssagem"><br>
-                                {% for x in result %}
-                                <div class="linha ">
-                                    <p>x.result</p>
-                                </div><br>
-                                {% endfor %}
-                                <div class="linha "></div><p></p><br>
-                                <div class="linha "></div><br>
-                                <div class="linha "></div><br>
-                                <div class="linha "></div>
+                                {% for x in paciente %}
+                                    <div class="linha ">
 
+
+                                        <p>SERa{{ x.dose }}ml</p>
+
+                                    </div><br>
+
+                                    <div class="linha ">
+
+                                         <p>o frasco possui{{ x.mg }}</p>
+
+                                    </div><br>
+
+                                    <div class="linha ">
+
+                                        <p>de um recipiente{{ x.ml }}</p>
+
+                                    </div><br>
+
+                                    <div class="linha ">
+
+                                        <p></p>
+
+                                    </div>
+                                {% endfor %}
 
                             </div>
 
