--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
 
                                     <div class="linha ">
 
-                                         <p><strong>será nescessario{{  }}ml a cada</strong></p>
+                                         <p><strong>será nescessario{{ x.ml }}ml a cada</strong></p>
 
                                     </div><br>
 
