twenty second commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,9 +95,9 @@
                                     <div class="linha ">
 
                                         <p>
-                                        {% for x in paciente %}
-                                            <strong>{{ x.mg }}horas pelo periodo preescrito</strong>
-                                        {% endfor %}
+
+                                            <strong>{{ hora }}</strong>
+
                                         </p>
 
                                     </div><br>
