--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,17 @@
 
         <div class="container bg-primary" id="section1">
              <div class="container" id="info">
-                            <p>
-                                <strong>Farmaty, criado para calcular as dosagens de acordo com as especificações
-                                passadas em receitas médicas.</strong>
-                            </p>
-                        </div>
+                 <div class="container" id="info_borda">
+
+                     <p>
+                         <strong>Farmaty, criado para calcular as dosagens de acordo com as especificações 
+                             passadas em receitas médicas.</strong>
+                         
+                     </p>
+                     <img src="../static/img/pilulas.png">
+
+                 </div>
+             </div>
             <div class="container" id="section2">
 
                 <div class="container" >
