--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                              passadas em receitas médicas.</strong>
                          
                      </p>
-                     <img src="../static/img/pilulas.png">
+                     <img src="../static/img/pilulas-fundo_nulo.png">
 
                  </div>
              </div>
