Twenty-fifth commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <div class="container" id="margem1">
             <div class="container" id="margem2">
 
-                <div class="container" id="bem_vindo"><h2>Bem vindo ao Farmaty</h2></div>
+                <div class="container" id="bem_vindo"><h2 id="h2">Bem vindo ao Farmaty</h2></div>
 
             </div>
 
@@ -16,13 +16,22 @@
         <div class="container bg-primary" id="section1">
              <div class="container" id="info">
                  <div class="container" id="info_borda">
+                     <div class="container" id="texto">
 
                      <p>
-                         <strong>Farmaty, criado para calcular as dosagens de acordo com as especificações 
-                             passadas em receitas médicas.</strong>
-                         
+                         Os médicamentos tem a finalidade de curar doenças e aliviar
+                         sintomas melhorando a qualidade e aumentando a expectativa
+                         de vida das pessoas. Sendo dividos em categorias de acordo
+                         com o tipo de tratamento determinado, como por exemplo os
+                         antibióticos para diversos tipos de infecções, anti-inflamatórios
+                         para impedir ou diminuir inflamações, e muitos outros.
+
                      </p>
-                     <img src="../static/img/pilulas-fundo_nulo.png">
+
+                     </div>
+                     <div class="container" id="img">
+                          <img src="../static/img/pilulas-fundo_nulo.png">
+                     </div>
 
                  </div>
              </div>
