--- a/static/style2.css
+++ b/static/style2.css
@@ -1,5 +1,5 @@
 #bottom{
-    background-image: url("./img/banner.jpg");
+    background-color: #87CEFA;
     height: 1000px;
 }
 #aspecto_borda {
@@ -13,7 +13,7 @@
 #conteudo{
     width: 100%;
     height: 900px;
-    background-image: url("./img/banner.jpg");
+    background-color: #87CEFA;
     position: relative;
     top: 10px;
     border: solid 2px #000;
@@ -37,10 +37,14 @@
     display: flex;
     text-align: center;
     position: relative;
-    top: 20px;
+    top: 30px;
 }
 
 
+/*Titulo inicial*/
+#h2{
+   font-size: 45px;
+}
 
 
 #bem-vindo{
@@ -48,7 +52,10 @@
     color: #fff;
 
 
+
 }
+
+/*fechamento tiltulo inicial*/
 /*fechamento da estilização do titulo bem vindo ao farmaty*/
 /* primeiro container de informação */
 #info{
@@ -74,6 +81,7 @@
 
     height: 250px;
 }
+
 #info p{
      position: relative;
      top: 30px;
@@ -82,15 +90,14 @@
 }
 
 
+
 /* fechamento do container de informação */
 
 #section1{
     height: 770px;
-    ;
-
     width: 98%;
     position: relative;
-    top: 10px;
+    top: 40px;
     border-radius: 10px
 
 
