--- a/templates/rascunho.html
+++ b/templates/rascunho.html
@@ -1,20 +1,23 @@
 {% extends "header.html" %}
 {% block conteudo %}
 <div  id="bottom">
-    <div class="container bg-primary" id="aspecto_borda">
+
+
         <div class="container " id="conteudo">
-            <div class="container" id="margem1">
-                <div class="container" id="margem2">
-
-                    <div class="container" id="bem_vindo"><h2 id="h2">Bem vindo ao Farmaty</h2></div>
-
-                </div>
-
-            </div>
 
 
-            <div class="container bg-primary" id="section1">
+            <div class="container " id="section1">
+
                  <div class="container" id="info">
+                     <div class="container" id="margem1">
+                        <div class="container" id="margem2">
+
+                            <div class="container" id="bem_vindo"><h2 id="h2">Bem vindo ao Farmaty</h2></div>
+
+                        </div>
+
+                     </div>
+
                      <div class="container" id="info_borda">
                           <p>
                              Os médicamentos tem a finalidade de curar doenças e aliviar
@@ -126,12 +129,10 @@
 
 
 
+            </div>
         </div>
 
-    </div>
-    </div>
+
 </div>
 
 {% endblock %}
-
-
