--- a/templates/index_2.html
+++ b/templates/index_2.html
@@ -4,7 +4,7 @@
     <h1>Bem vindo ao Farmaty</h1>
 
     <div id="content">
-        <div id="text">
+        <div class="text">
             <p>
                 Farmaty é um espaço dedicado ao conhecimento sobre medicamentos e seu uso consciente.
                 Aqui você encontra informações úteis sobre categorias de fármacos, dicas de uso e ferramentas
@@ -75,10 +75,95 @@
 
                 </div>
 
-                <div id="img">
+                <div class="img">
                     <img src="static/img/pilulas-gpt.png" alt="Pílulas" width="300">
                 </div>
             </div>
+        </section>
+
+        <section id="conteudo">
+
+            <div id="history">
+                <div >
+                    <h2>O que são os antibióticos?</h2>
+                    <p>
+                        Antibióticos são medicamentos utilizados para eliminar ou inibir a multiplicação de bactérias,
+                              sendo indicados no tratamento de infecções bacterianas. Essas infecções ocorrem quando há
+                              invasão de bactérias patogênicas ou um desequilíbrio na população de bactérias que habitam
+                              naturalmente o corpo humano. Muitos desses micro-organismos vivem em harmonia conosco, sem
+                              causar danos. No entanto, quando certas bactérias se multiplicam excessivamente ou atingem
+                              órgãos onde não deveriam estar, podem provocar doenças e comprometer a saúde.
+                    </p>
+                </div>
+                <div id="history2">
+                    <div class="text text_sup">
+                        <h3>O que são as infecções bacterianas?</h3>
+                        <p>As infecções bacterianas são doenças ocasionadas pela invasão ou pelo desequilíbrio das
+                            bactérias no organismo. Alguns desses micro-organismos estão presentes naturalmente em
+                            vários locais do corpo humano sem causar doenças. Entretanto, a quantidade exagerada de
+                            determinadas bactérias ou a invasão de determinados órgãos pode causar danos graves.
+                        </p>
+                    </div>
+                    <div class="img img_sup">
+                        <img src="static/img/img_lab_formatada.png" width="300">
+
+                    </div>
+                </div>
+                <div>
+                    <div class="text-sup">
+                        <div>
+                            <h3>Por que não se deve fazer uso incorreto de antibióticos?</h3>
+                            <p>O uso incorreto torna as bactérias mais resistentes aos medicamentos e pode levar a outras complicações, como:</p>
+                        </div>
+                    </div>
+                    <div id="tex-list">
+                        <div id="list">
+
+                            <ul>
+                                <li>
+                                    <p>
+                                        <strong>Disbiose:</strong> Desequilíbrio na comunidade das bactérias do intestino que pode causar problemas
+                                        de saúde a curto e longo prazo.
+                                    </p>
+                                </li>
+                                <li>
+                                    <p>
+                                        <strong>Aumento de infecções por bactérias multirresistentes:</strong>O uso incorreto de antibióticos
+                                        fortalece as bactérias, tornando-as mais difíceis de controlar.
+                                    </p>
+                                </li>
+                                <li>
+                                    <p>
+                                        <strong>Aumento da mortalidade:</strong> O uso inadequado de antibióticos pode levar a um maior número de mortes.
+                                    </p>
+                                </li>
+                                <li>
+                                    <p>
+                                        <strong>Prolongamento da hospitalização:</strong> O uso incorreto de antibióticos pode prolongar a duração da estadia no hospital.
+                                    </p>
+                                </li>
+                                <li>
+                                    <p>
+                                        <strong>Efeitos adversos:</strong> O uso de antibióticos pode causar efeitos colaterais como desconforto estomacal, diarreia e infecções vaginais por leveduras.
+                                    </p>
+                                </li>
+                                <li>
+                                    <p>
+                                        •	<strong>Aumento de custo:</strong> O uso incorreto de antibióticos pode aumentar os custos com a saúde.
+                                    </p>
+                                </li>
+                            </ul>
+
+                        </div>
+                        <div class="img img-list">
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
         </section>
     </div>
 </div>
